update account and login router
