# app/controllers/token_controller.go
@@ -1,6 +1,9 @@
 package controllers
 
 import (
+	"crypto/sha256"
+	"fmt"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/kaleemubarok/fiber/pkg/utils"
 )
@@ -27,4 +30,83 @@ func GetNewAccessToken(c *fiber.Ctx) error {
 		"msg":          nil,
 		"access_token": token,
 	})
+}
+
+// Login func.
+// @Description Login to get access token.
+// @Summary Login to get access token
+// @Tags Login
+// @Accept json
+// @Produce json
+// @Param email body string true "Email"
+// @Param password body string true "Password"
+// @Success 200 {string} status "ok"
+// @Router /v1/login [post]
+func Login(c *fiber.Ctx) error {
+	type accountRequest struct {
+		Email    string `json:"email" validate:"required"`
+		Password string `json:"password" validate:"required"`
+	}
+
+	loginReq := &accountRequest{}
+	if err := c.BodyParser(loginReq); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	validate := utils.NewValidator()
+	if err := validate.Struct(loginReq); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   utils.ValidatorErrors(err), //todo: update error msg
+		})
+	}
+
+	db, err := OpenDBConnection()
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	loginRes, err := db.GetAccountByEmail(loginReq.Email)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   "email/password not found. " + err.Error(),
+		})
+	}
+
+	password := loginReq.Password
+	password += loginRes.Salt
+	h := sha256.New()
+	h.Write([]byte(password))
+	hashedPassword := fmt.Sprintf("%x", h.Sum(nil))
+
+	if loginRes.Password != hashedPassword {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   "wrong password",
+		})
+	}
+
+	uid := loginRes.ID.String()
+
+	token, err := utils.CreateNewAccessToken(uid)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"error":        false,
+		"msg":          nil,
+		"access_token": token,
+	})
+
 }
