# pkg/routes/public_routes.go
@@ -11,7 +11,10 @@ func PublicRoutes(a *fiber.App) {
 	route.Get("/books", controllers.GetBooks)
 	route.Get("/book/:id", controllers.GetBook)
 	route.Get("/token/new", controllers.GetNewAccessToken)
+	route.Post("/login", controllers.Login)
 
 	route.Get("/accounts", controllers.GetAccounts)
+	route.Get("/account/:id", controllers.GetAccount)
+	route.Post("/account", controllers.CreateAccount)
 
 }
